# rust-grpc-embedder

./: .gitignore  Cargo.toml  Dockerfile  build.rs  readme.md
proto/: chunk_embed.proto  message.proto
src/: main.rs
src/service/: chunk_embed_service.rs  huggingface.rs  mod.rs
