[package]
name = "embedder"
version = "0.1.0"
edition = "2021"

[dependencies]
langchain-rust = { version = "4.6.0", features = ["fastembed"] }
prost = "0.13.4"
serde_json = "1.0.135"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
tonic-reflection = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
