[package]
name = "embedder"
version = "0.1.0"
edition = "2021"

[dependencies]
langchain-rust = { version = "4.6.0", features = ["fastembed"] }
prost = "0.13.4"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"
serde = { version = "1.0.217", features = ["derive"] }
reqwest = { version = "0.11.27", features = ["json", "stream"] }
anyhow = "1.0.95"
dotenvy = "0.15.7"

[build-dependencies]
tonic-build = "0.12.3"
